# houses

./: README.md  app.py  content.html  data.json  houses.db  main.py  package-lock.json  properyDataInfo.txt  protocols.py  pyproject.toml  rightmove.py
assets/: styles.tcss
screens/: __init__.py  main_screen.py
utils/: __init__.py  house_service.py  json_store.py  rightmove.py  web_requests.py
widgets/: __init__.py  house_list.py
