[project]
name = "houses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "regex>=2025.7.34",
    "requests>=2.32.4",
    "ruff>=0.12.7",
    "textual>=5.1.1",
]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]
